tdf#105548 fix incorrect DATEDIF result.

DATEDIF didn't convert datetime values to date before calculating
date differences, which in certain cases produced incorrect results.
Adding use case to unit test document.
Removed 'TODO-comment' after checking what Excel really does.

Change-Id: Icc16413e43f664d1c993d24e31eb4dc6990623e9
Reviewed-on: https://gerrit.libreoffice.org/33662
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>